# opengl_samples

./: .gitignore  CMakeLists.txt  RawImage.cpp  RawImage.h  Torus.cpp  Torus.h  TorusModel.cpp  TorusModel.h  TorusWithHeightMap.cpp  TorusWithHeightMap.h  build.bat  build.sh  build_debug.bat  conanfile.txt  main.cpp  obj_model.cpp  obj_model.h  opengl_shader.cpp
assets/: heightmap.fs  heightmap.vs  model.fs  model.vs  model_sky_fresnel.fs  model_sky_reflection.fs  model_sky_refraction.fs  simple-shader.fs  simple-shader.vs
